// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Color Variants 1`] = `
<div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 100px; place-items: center; margin-top: var(--ds-size-12);">
  <button
    data-variant="tertiary"
    popovertarget="_r_d_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="neutral"
    data-floating="bottom"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    neutralDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_e_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="neutral"
    data-floating="bottom"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    neutralTinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_f_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="accent"
    data-floating="bottom"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    accentDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_g_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="accent"
    data-floating="bottom"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    accentTinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_h_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="support1"
    data-floating="top"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    support1Default
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_i_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="support1"
    data-floating="top"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    support1Tinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_j_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="support2"
    data-floating="top"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    support2Default
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_k_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="support2"
    data-floating="top"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    support2Tinted
  </div>
</div>
`;

exports[`Controlled 1`] = `
<button
  data-variant="tertiary"
  popovertarget="_r_l_"
  type="button"
>
  Fjern
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.03 7.03a.75.75 0 0 0-1.06-1.06L12 10.94 7.03 5.97a.75.75 0 0 0-1.06 1.06L10.94 12l-4.97 4.97a.75.75 0 1 0 1.06 1.06L12 13.06l4.97 4.97a.75.75 0 1 0 1.06-1.06L13.06 12z"
      fill="currentColor"
    >
    </path>
  </svg>
</button>
<div
  data-floating="bottom"
  data-placement="top"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
>
  Er du sikker på at du vil fjerne raden? Handlingen kan ikke angres.
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-2);">
    <button
      data-size="sm"
      data-variant="primary"
      type="button"
    >
      Ja, fjern
    </button>
    <button
      data-size="sm"
      data-variant="tertiary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</div>
`;

exports[`Dotted Underline 1`] = `
<p data-variant="default">
  I aldersgruppen 1-5 år går 93 prosent av barna i barnehage. I aldersgruppen 3-5 år er andelen 97 prosent. Til sammenligning er
  <button
    data-popover="inline"
    popovertarget="_r_4_"
  >
    OECD
  </button>
  -gjennomsnittet for andelen 3-5-åringer i barnehage på 83 prosent (OECD 2021).
</p>
<div
  data-color="neutral"
  data-floating="bottom"
  data-placement="top"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
>
  <p data-variant="default">
    <strong>
      Organisasjonen for økonomisk samarbeid og utvikling
    </strong>
    (OCED) er en internasjonal organisasjon som sammarbeider om å fremme økonomisk og sosial vekst og utvikling.
  </p>
</div>
`;

exports[`Interactive 1`] = `
<button
  aria-label="Lukk"
  data-variant="secondary"
  popovertarget="_r_2_"
  type="button"
>
  Lukk
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.03 7.03a.75.75 0 0 0-1.06-1.06L12 10.94 7.03 5.97a.75.75 0 0 0-1.06 1.06L10.94 12l-4.97 4.97a.75.75 0 1 0 1.06 1.06L12 13.06l4.97 4.97a.75.75 0 1 0 1.06-1.06L13.06 12z"
      fill="currentColor"
    >
    </path>
  </svg>
</button>
<div
  data-floating="bottom"
  data-placement="top"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
>
  <p data-variant="default">
    Vil du lagre endringene dine?
  </p>
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-2);">
    <button
      data-size="sm"
      data-variant="primary"
      type="button"
    >
      Lagre
    </button>
    <button
      data-size="sm"
      data-variant="tertiary"
      type="button"
    >
      Ikke lagre
    </button>
  </div>
</div>
`;

exports[`Preview 1`] = `
<button
  data-variant="tertiary"
  popovertarget="_r_0_"
  type="button"
>
  Fjern
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.03 7.03a.75.75 0 0 0-1.06-1.06L12 10.94 7.03 5.97a.75.75 0 0 0-1.06 1.06L10.94 12l-4.97 4.97a.75.75 0 1 0 1.06 1.06L12 13.06l4.97 4.97a.75.75 0 1 0 1.06-1.06L13.06 12z"
      fill="currentColor"
    >
    </path>
  </svg>
</button>
<div
  data-floating="bottom"
  data-placement="top"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
>
  Er du sikker på at du vil fjerne raden? Handlingen kan ikke angres.
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-2);">
    <button
      data-size="sm"
      data-variant="primary"
      type="button"
    >
      Ja, fjern
    </button>
    <button
      data-size="sm"
      data-variant="tertiary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</div>
`;

exports[`Variants 1`] = `
<div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 100px; place-items: center; margin-top: var(--ds-size-12);">
  <button
    data-variant="tertiary"
    popovertarget="_r_5_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="success"
    data-floating="bottom"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    successDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_6_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="success"
    data-floating="bottom"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    successTinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_7_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="danger"
    data-floating="bottom"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    dangerDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_8_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="danger"
    data-floating="bottom"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    dangerTinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_9_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="info"
    data-floating="top"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    infoDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_a_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="info"
    data-floating="top"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    infoTinted
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_b_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="warning"
    data-floating="top"
    data-placement="top"
    data-variant="default"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    warningDefault
  </div>
  <button
    data-variant="tertiary"
    popovertarget="_r_c_"
    type="button"
  >
    popover
  </button>
  <div
    data-color="warning"
    data-floating="top"
    data-placement="top"
    data-variant="tinted"
    id="<removed>"
    popover="manual"
    style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
  >
    warningTinted
  </div>
</div>
`;

exports[`Without Context 1`] = `
<button
  aria-label="Slett rad"
  data-variant="primary"
  popovertarget="my-popover"
  type="button"
>
  <svg
    aria-labelledby="<removed>"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title id="<removed>">
      Slett rad
    </title>
    <path
      clip-rule="evenodd"
      d="M4.5 6.25a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.876-11.384h.805a.75.75 0 0 0 0-1.5h-2.75V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25zm5.5-1.5c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm-3.19 3 .867 11.27c.01.13.118.23.249.23h8.148c.13 0 .24-.1.25-.23l.866-11.27zm3.19 2a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75m4 0a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
      fill="currentColor"
      fill-rule="evenodd"
    >
    </path>
  </svg>
</button>
<div
  data-color="neutral"
  data-floating="bottom"
  data-placement="top"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; translate: <removed>;"
>
  <p data-variant="default">
    Er du sikker på at du vil slette raden? Handlingen kan ikke angres.
  </p>
  <div style="display: flex; gap: var(--ds-size-2); margin-top: var(--ds-size-2);">
    <button
      data-size="sm"
      data-variant="primary"
      type="button"
    >
      Ja, slett den
    </button>
    <button
      data-size="sm"
      data-variant="tertiary"
      type="button"
    >
      Avbryt
    </button>
  </div>
</div>
`;
